// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomOption renders correctly when untouched 1`] = `
<div
  class="form-group"
>
  <label
    class=""
    for="customOption"
  />
  <input
    class="form-control"
    name="customOption"
    type="text"
  />
</div>
`;

exports[`CustomOption renders correctly when valid 1`] = `
<div
  class="form-group"
>
  <label
    class=""
    for="customOption"
  />
  <input
    class="is-valid form-control"
    name="customOption"
    type="text"
  />
</div>
`;
